--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,12 @@
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.3",
     "dotenv": "^16.4.5",
+    "firebase": "^10.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "react-toastify": "^10.0.5",
+    "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
